--- a/wercker.yml
+++ b/wercker.yml
@@ -6,7 +6,7 @@ build:
     - script: 
       name: build
       code: |
-        yum localinstall -y https://objectstorage.us-ashburn-1.oraclecloud.com/p/yWwR4Al81y-vMBMwHssK9dEaPIifBZPkdKLNCCdczr0/n/zte/b/artifacts-apps/o/jdk-7u55-linux-x64.rpm
+        yum install -y https://objectstorage.us-ashburn-1.oraclecloud.com/p/yWwR4Al81y-vMBMwHssK9dEaPIifBZPkdKLNCCdczr0/n/zte/b/artifacts-apps/o/jdk-7u55-linux-x64.rpm
         yum install redhat-lsb crontabs -y
         yum clean all
         cp ./tomcat.tar.gz /usr/local/ && tar -xvf /usr/loca/tomcat.tar.gz && rm -rf ./tomcat.tar.gz
