--- a/wercker.yml
+++ b/wercker.yml
@@ -31,7 +31,7 @@ build:
     - internal/docker-push:
         username: $DOCKER_USER
         password: $DOCKER_PASSWORD
-        repository: wrc.io/burning1luffy/uacprodmodel
+        repository: wcr.io/burningluffy1/uacprodmodel
         tag: $TAG
         ports: 8080
         cmd: "/root/run.sh"
